<resources>

    <string name="app_name">LiveTv</string>

    <string name="time_out">网络超时</string>
    <string name="load_more">加载更多</string>
    <string name="loading">加载中</string>
    <string name="video_layout_loading">正在缓冲...</string>
    <string name="init_decoders">正在进行第一次解压解码包...</string>
    <string name="tv_title">电视</string>
    <string name="fm_title">广播</string>
    
    <string name="account_login">账号登陆</string>
    <string name="home_title">电视直播demo</string>
    
    <string name="bar_home_tile">首页</string>
    <string name="bar_live_tile">直播</string>
    <string name="bar_column_tile">栏目</string>
    <string name="bar_topic_tile">专题</string>
    <string name="bar_interact_tile">互动</string>
    
</resources>
